# ChangeLog for app-emacs/limit
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/limit/ChangeLog,v 1.21 2007/07/04 23:01:17 opfer Exp $

  04 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  limit-1.14.9_pre20041001.ebuild:
  adjust DESCRIPTION; manual make to emake; some die comments added; some
  quotes added

  15 May 2007; Ulrich Mueller <ulm@gentoo.org>
  limit-1.14.9_pre20041001.ebuild:
  Don't provide virtual/flim, it is a new-style virtual now.

  15 May 2007; Ulrich Mueller <ulm@gentoo.org>
  limit-1.14.9_pre20041001.ebuild:
  Prepare for new-style virtual/flim: change blocking dependency from
  !virtual/flim to !app-emacs/flim.

  07 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/60flim-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

  23 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  -limit-1.14.8_pre20040415.ebuild:
  clean up

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  28 Aug 2005; Olivier Crête <tester@gentoo.org>
  limit-1.14.9_pre20041001.ebuild:
  Marked ~amd64, thanks to AT AJ Armstrong <aja@gentoo.org> for testing

  12 Dec 2004; Jason Wever <weeve@gentoo.org>
  limit-1.14.9_pre20041001.ebuild:
  Stable on sparc.

  04 Nov 2004; Mamoru KOMACHI <usata@gentoo.org>
  limit-1.14.9_pre20041001.ebuild:
  Stable on x86, alpha, ppc and ppc-macos.

*limit-1.14.9_pre20041001 (06 Oct 2004)

  06 Oct 2004; Mamoru KOMACHI <usata@gentoo.org>
  +limit-1.14.9_pre20041001.ebuild:
  Version bumped. Added ~sparc keyword back because _pre20040112 snapshot
  had that keyword.

  19 Jul 2004; Mamoru KOMACHI <usata@gentoo.org>
  limit-1.14.8_pre20040415.ebuild:
  Added to macos

  26 Apr 2004; David Holm <dholm@gentoo.org> limit-1.14.8_pre20040415.ebuild:
  Added to ~ppc.

*limit-1.14.8_pre20040415 (26 Apr 2004)

  26 Apr 2004; Mamoru KOMACHI <usata@gentoo.org>