@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/limit
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/limit/ChangeLog,v 1.21 2007/07/04 23:01:17 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/limit/ChangeLog,v 1.22 2007/08/27 09:16:20 ulm Exp $
+
+*limit-1.14.10_pre20070618 (27 Aug 2007)
+
+  27 Aug 2007; Ulrich Mueller <ulm@gentoo.org>
+  limit-1.14.9_pre20041001.ebuild, +limit-1.14.10_pre20070618.ebuild:
+  Version bump. SRC_URI changed. Dropped ppc-macos keyword.
 
   04 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
   limit-1.14.9_pre20041001.ebuild:
